# hardware-monitor

./: .gitignore  CMakeLists.txt  README.md
include/: cpu_monitor.hpp  framerate_provider.hpp  gpu_monitor.hpp  protocol.hpp  serial_port.hpp  thermal_monitor.hpp
scripts/: set-fps.sh
src/: cpu_monitor.cpp  framerate_provider.cpp  gpu_monitor.cpp  main.cpp  protocol.cpp  serial_port.cpp  thermal_monitor.cpp
systemd/: hardware-monitor.service
tests/: CMakeLists.txt  test_cpu_calc.cpp  test_framerate.cpp  test_protocol.cpp  test_smoke.cpp
